--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,21 @@
 body {
   @apply bg-gray-100;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #131313;
+    color: #efefef;
+  }
+  input {
+    background-color: #090909;
+    border: 1px solid #333;
+    color: #efefef !important;
+  }
+  a {
+    background-color: #4c4c4c !important;
+  }
+  a:hover {
+    background-color: #7a7a7a !important;
+  }
+}
