--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@ body {
   @apply bg-gray-100;
 }
 
+li span:nth-child(1) {
+  padding-right: 18px;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #131313;
